force-app/main/default/objects/InterfaceLog__c/InterfaceLog__c.object-meta.xml
<CustomObject>
    <description>Interface Log</description>
    <label>InterfaceLog</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>InterfaceLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>