force-app/main/default/objects/InterfaceLog__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <label>Datetime</label>
    <type>DateTime</type>
</CustomField>