force-app/main/default/objects/InterfaceLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>