force-app/main/default/objects/InterfaceLog__c/fields/Fail__c.field-meta.xml
<CustomField>
    <fullName>Fail__c</fullName>
    <label>Fail</label>
    <length>54000</length>
    <type>LongTextArea</type>
</CustomField>