force-app/main/default/objects/InterfaceLog__c/fields/hasFailed__c.field-meta.xml
<CustomField>
    <fullName>hasFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>인터페이스 실패 여부 - 재송신 프로세스가 있는 경우, 필터링 용도로 사용한다.
재송신에 성공한 경우, status는 error지만 false일 수 있다</description>
    <inlineHelpText>인터페이스 실패 여부 - 재송신 프로세스가 있는 경우, 필터링 용도로 사용한다.
재송신에 성공한 경우, status는 error지만 false일 수 있다</inlineHelpText>
    <label>hasFailed</label>
    <type>Checkbox</type>
</CustomField>