force-app/main/default/objects/InterfaceLog__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>