force-app/main/default/objects/InterfaceLog__c/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <externalId>true</externalId>
    <label>InterfaceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>