force-app/main/default/objects/InterfaceLog__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>JobType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>