force-app/main/default/objects/InterfaceLog__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>인터페이스 데이터를 조회하기 위한 Key 필드</description>
    <label>Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>