force-app/main/default/objects/InterfaceLog__c/fields/ResponseBody1__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody1__c</fullName>
    <label>ResponseBody1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>