force-app/main/default/objects/InterfaceLog__c/fields/ResponseBody2__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody2__c</fullName>
    <label>ResponseBody2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>