force-app/main/default/objects/InterfaceLog__c/fields/ResponseBody3__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody3__c</fullName>
    <label>ResponseBody3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>