force-app/main/default/objects/InterfaceLog__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success</label>
    <length>54000</length>
    <type>LongTextArea</type>
</CustomField>